[workspace]
members = [
	"api",
	"database",
	"minecraft",
	"api/macros",
	"translate",
]

[package]
name = "statpixel"
version = "0.11.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"
readme = "https://github.com/matteopolak/statpixel/blob/main/README.md"

[[bin]]
name = "statpixel"
path = "bin/main.rs"

[[bench]]
name = "bench_main"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
api = { path = "./api" }
database = { path = "./database" }
minecraft = { path = "./minecraft" }
translate = { path = "./translate" }
bincode = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
poise = { workspace = true }
skia-safe = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
chrono = { version = "0.4.24", default-features = false, features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
dotenvy = "0.15.7"
flate2 = "1.0.26"
futures = "0.3.28"
fxhash = "0.2.1"
skia-safe = { version = "0.62.0", features = ["textlayout"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
num-format = "0.4.4"
reqwest = { version = "0.11.18", features = ["json"] }
darling = "0.20.1"
konst = "0.3.4"
once_cell = "1.17.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
pure-rust-locales = "0.5.6"
moka = { version = "0.10.2", default-features = false, features = ["future", "atomic64", "quanta"] }
syn = "2.0.17"
proc-macro-crate = "1.3.1"
redis = { version = "0.23.0", features = [ "cluster-async", "tokio-comp" ] }
base64 = "0.21.2"
fastnbt = "2.4.4"

[workspace.dependencies.diesel]
version = "2.0.4"
# Figure out how to make `without-deprecated` compile
features = ["uuid", "chrono"]

[workspace.dependencies.diesel-async]
version = "0.2.2"
features = ["postgres", "deadpool"]

[workspace.dependencies.tokio]
version = "1.27.0"
features = ["macros", "rt-multi-thread", "parking_lot"]

[workspace.dependencies.uuid]
version = "1.3.1"
features = ["serde"]

[workspace.dependencies.plotters]
git = "https://github.com/matteopolak/plotters.git"
branch = "next-release-devel"

[workspace.dependencies.plotters-backend]
git = "https://github.com/matteopolak/plotters.git"
branch = "next-release-devel"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"

[workspace.dependencies.serde]
version = "1.0.160"
features = ["derive"]

[dev-dependencies]
criterion = "0.4.0"
