[workspace]
members = [
	"api",
	"database",
	"minecraft",
	"api/macros",
	"server",
	"statpixel",
	"translate",
]
resolver = "2"
default-members = ["statpixel"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
base64 = "0.21"
darling = "0.20"
dotenvy = "0.15"
fastnbt = "2"
flate2 = "1"
fluent = "0.16"
futures = "0.3"
fxhash = "0.2"
intl-memoizer = "0.5"
konst = "0.3"
once_cell = "1"
proc-macro2 = "1"
proc-macro-crate = "1"
pure-rust-locales = "0.5"
quote = "1"
rand = "0.8"
serde_json = "1"
syn = "2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.dependencies.axum]
version = "0.6"
features = ["headers"]

[workspace.dependencies.bincode]
version = "2.0.0-rc.3"
features = ["serde"]

[workspace.dependencies.chrono]
version = "0.4"
default-features = false
features = ["alloc", "std", "clock", "serde", "unstable-locales"]

[workspace.dependencies.diesel]
version = "2"
# Figure out how to make `without-deprecated` compile
features = ["uuid", "chrono"]

[workspace.dependencies.diesel-async]
version = "0.3"
features = ["postgres", "deadpool"]

[workspace.dependencies.moka]
version = "0.11"
default-features = false
features = ["future", "atomic64", "quanta"]

[workspace.dependencies.num-format]
git = "https://github.com/matteopolak/num-format"

[workspace.dependencies.phf]
version = "0.11"
features = ["macros"]

[workspace.dependencies.plotters]
git = "https://github.com/matteopolak/plotters.git"
branch = "next-release-devel"
default-features = false
features = ["bitmap_backend", "datetime", "full_palette", "line_series"]

[workspace.dependencies.plotters-backend]
git = "https://github.com/matteopolak/plotters.git"
branch = "next-release-devel"

[workspace.dependencies.poise]
git = "https://github.com/matteopolak/poise"
branch = "serenity-next"

[workspace.dependencies.redis]
version = "0.23"
default-features = false
features = ["cluster-async", "tokio-comp"]

[workspace.dependencies.reqwest]
version = "0.11"
features = ["json"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.skia-safe]
version = "0.63"
features = ["textlayout"]

[workspace.dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "parking_lot"]

[workspace.dependencies.uuid]
version = "1"
features = ["serde"]
