[package]
name = "api"
version = "0.27.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
database.path = "../database"
macros.path = "./macros"
minecraft.path = "../minecraft"
translate.path = "../translate"
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fastnbt.workspace = true
flate2.workspace = true
futures.workspace = true
moka.workspace = true
num-format.workspace = true
once_cell.workspace = true
phf.workspace = true
plotters.workspace = true
plotters-backend.workspace = true
poise.workspace = true
pure-rust-locales.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
skia-safe.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
bitcode.workspace = true
dotenvy_macro.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true
