[package]
name = "api"
version = "0.31.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
database.path = "../database"
minecraft.path = "../minecraft"
label.path = "../label"
translate.path = "../translate"
image.path = "../image"
derive.path = "../derive"
hypixel.path = "../hypixel"
base64.workspace = true
extra.path = "../extra"
bincode.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fastnbt.workspace = true
flate2.workspace = true
futures.workspace = true
moka.workspace = true
num-format.workspace = true
once_cell.workspace = true
phf.workspace = true
plotters.workspace = true
plotters-backend.workspace = true
poise.workspace = true
pure-rust-locales.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
skia-safe.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
bitcode.workspace = true
dotenvy_macro.workspace = true

[dependencies.redis]
workspace = true
optional = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true

[features]
default = ["redis", "cache", "game"]

redis = ["dep:redis"]
cache = []
game = []
