[package]
name = "api"
version = "0.31.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
minecraft.path = "../minecraft"
image.path = "../image"
hypixel.path = "../hypixel"
base64.workspace = true
extra.path = "../extra"
bincode.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fastnbt.workspace = true
flate2.workspace = true
futures.workspace = true
moka.workspace = true
num-format.workspace = true
once_cell.workspace = true
phf.workspace = true
plotters.workspace = true
plotters-backend.workspace = true
poise.workspace = true
pure-rust-locales.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
bitcode.workspace = true
dotenvy_macro.workspace = true

[dependencies.label]
path = "../label"
optional = true

[dependencies.translate]
path = "../translate"
features = ["error"]
optional = true

[dependencies.skia-safe]
workspace = true
optional = true

[dependencies.dotenvy]
workspace = true
optional = true

[dependencies.database]
path = "../database"
default-features = false
optional = true

[dependencies.redis]
workspace = true
optional = true

[dependencies.derive]
path = "../derive"
optional = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true

[features]
default = ["redis", "cache", "game", "database", "locale", "canvas"]

runtime_env = ["dep:dotenvy"]
redis = ["dep:redis"]
cache = []
game = ["dep:derive", "locale", "canvas"]
database = ["dep:database", "translate/data"]
locale = ["translate/locale", "dep:label"]
canvas = ["dep:skia-safe"]
