[package]
name = "canvas"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
api = { path = "../api" }
minecraft = { path = "../minecraft" }
translate = { path = "../translate" }
konst = { version = "0.3.4", features = ["alloc"] }
once_cell = "1.17.1"
skia-safe = "0.62.0"
num-format = "0.4.4"
