[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
minecraft.workspace = true
hypixel.workspace = true
translate.path = "../translate"
skia-safe.workspace = true
label.workspace = true
chrono.workspace = true
plotters.workspace = true
poise.workspace = true
uuid.workspace = true
