[package]
name = "database"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
chrono = "0.4.24"
diesel = "2.0.4"
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
uuid = { version = "1.3.1", features = ["serde"] }
