[package]
name = "derive"
version = "0.33.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
proc-macro-crate.workspace = true
quote.workspace = true
syn.workspace = true

[dependencies.minecraft]
path = "../minecraft"
features = ["darling"]
