[package]
name = "statpixel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
poise = "0.5.4"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
database = { path = "../database" }
dotenvy = "0.15.7"
diesel = { version = "2.0.4", features = ["uuid"] }
uuid = { version = "1.3.1", features = ["serde"] }
