[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "statpixel"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
poise = "0.5.4"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
database = { path = "../database" }
dotenvy = "0.15.7"
diesel = { version = "2.0.4", features = ["uuid"] }
uuid = { version = "1.3.1", features = ["serde"] }
skia-safe = "0.62.0"
once_cell = "1.17.1"
skia-bindings = "0.62.0"
thiserror = "1.0.40"
r2d2 = "0.8.10"
