[package]
name = "extra"
version = "0.31.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"

[dependencies]
label.path = "../label"
serde.workspace = true

[dependencies.translate]
path = "../translate"
default-features = false

[dependencies.bincode]
workspace = true
features = ["serde"]
