[package]
name = "extra"
version = "0.35.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"

[dependencies]
serde.workspace = true

[dependencies.redis]
workspace = true
optional = true

[dependencies.label]
path = "../label"
optional = true

[dependencies.translate]
path = "../translate"
default-features = false

[dependencies.bincode]
workspace = true
features = ["serde"]

[features]
default = ["locale", "redis"]

locale = ["dep:label"]
redis = ["dep:redis"]
