[package]
name = "hypixel"
version = "0.32.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"

[dependencies]
serde_json.workspace = true
image.path = "../image"
once_cell.workspace = true

[dependencies.label]
path = "../label"
optional = true

[dependencies.translate]
path = "../translate"
default-features = false
features = ["context"]

[dependencies.minecraft]
path = "../minecraft"
features = ["calc", "serde", "bincode"]

[dependencies.bincode]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.uuid]
workspace = true
features = ["serde"]

[dependencies.chrono]
workspace = true
features = ["serde"]

[features]
default = ["locale"]

locale = ["dep:label"]
