[package]
name = "label"
version = "0.31.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"

[dependencies]
pure-rust-locales.workspace = true
minecraft.path = "../minecraft"
translate.path = "../translate"
num-format.workspace = true

[dependencies.uuid]
workspace = true

[dependencies.chrono]
workspace = true
features = ["unstable-locales"]
