[package]
name = "label"
version = "0.33.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"

[dependencies]
pure-rust-locales.workspace = true
minecraft.path = "../minecraft"
num-format.workspace = true

[dependencies.translate]
path = "../translate"
default-features = false
features = ["locale", "context"]

[dependencies.uuid]
workspace = true

[dependencies.chrono]
workspace = true
features = ["unstable-locales"]
