[package]
name = "minecraft"
version = "0.12.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
bincode = { workspace = true }
darling = { workspace = true }
konst = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
skia-safe = { workspace = true }
thiserror = { workspace = true }
plotters = { workspace = true }
