[package]
name = "minecraft"
version = "0.31.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"

[dependencies]
konst.workspace = true
once_cell.workspace = true
plotters.workspace = true
proc-macro2.workspace = true
quote.workspace = true
thiserror.workspace = true

[dependencies.bincode]
workspace = true
optional = true

[dependencies.bitcode]
workspace = true
optional = true

[dependencies.darling]
workspace = true
optional = true

[dependencies.diesel]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.skia-safe]
workspace = true
optional = true

[features]
default = ["serde", "bincode", "bitcode", "darling", "diesel", "skia", "calc"]

serde = ["dep:serde", "serde/derive"]
bincode = ["dep:bincode", "serde?/derive"]
bitcode = ["dep:bitcode", "serde?/derive"]
darling = ["dep:darling"]
diesel = ["dep:diesel"]
skia = ["dep:skia-safe"]
# Each calc module contains a conversion from level -> skia colour for use
# in gradients for level progression
calc = ["skia"]
