[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
database.path = "../database"
statpixel.path = "../statpixel"
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber = "0.3.17"
tracing.workspace = true
diesel.workspace = true
diesel-async = "0.3.1"
dotenvy.workspace = true
once_cell.workspace = true
