[package]
name = "translate"
version = "0.25.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
database.path = "../database"
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fluent.workspace = true
intl-memoizer.workspace = true
num-format.workspace = true
poise.workspace = true
redis.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true
humantime.workspace = true
serde.workspace = true
