[package]
name = "translate"
version = "0.31.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies.chrono]
workspace = true
optional = true

[dependencies.num-format]
workspace = true
optional = true

[dependencies.database]
path = "../database"
optional = true
default-features = false

[dependencies.base64]
workspace = true
optional = true

[dependencies.bincode]
workspace = true
optional = true

[dependencies.diesel]
workspace = true
optional = true

[dependencies.diesel-async]
workspace = true
optional = true

[dependencies.fluent]
workspace = true
optional = true

[dependencies.intl-memoizer]
workspace = true
optional = true

[dependencies.poise]
workspace = true
optional = true

[dependencies.redis]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true
optional = true

[dependencies.tracing]
workspace = true
optional = true

[dependencies.uuid]
workspace = true
optional = true

[dependencies.humantime]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[features]
default = ["error", "data", "locale", "context"]
error = [
	"dep:thiserror",
	"dep:reqwest",
	"dep:uuid",
	"dep:diesel",
	"dep:diesel-async",
	"dep:redis",
	"dep:serde_json",
	"dep:bincode",
	"dep:poise",
	"dep:base64",
	"dep:humantime",
]
data = ["dep:poise", "dep:database", "dep:thiserror"]
locale = ["dep:fluent", "dep:tracing", "dep:intl-memoizer"]
context = [
	"dep:serde",
	"dep:chrono",
	"dep:num-format",
	"dep:poise",
	"data",
	"locale",
]
