[package]
name = "macros"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[lib]
proc-macro = true

[dependencies]
minecraft = { path = "../../minecraft" }
darling = "0.20.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
proc-macro-crate = "1.3.1"
