[package]
name = "macros"
version = "0.16.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[lib]
proc-macro = true

[dependencies]
minecraft = { path = "../../minecraft" }
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-crate = { workspace = true }
