[package]
name = "skin_renderer"
authors = ["Matthew Polak <contact@matteopolak.com>"]
edition = "2021"
version = "0.37.0"

[[bin]]
name = "skin_renderer"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
image = "0.24"
tobj = { version = "4", features = ["async"] }
wgpu = "0.17"
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
glam = "0.24"
