[package]
name = "skin_renderer"
authors = ["Matthew Polak <contact@matteopolak.com>"]
edition = "2021"
version = "0.38.0"

[[bin]]
name = "skin_renderer"

[dependencies]
bytemuck.workspace = true
image.workspace = true
tobj.workspace = true
wgpu.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
glam.workspace = true
