[package]
name = "skin_renderer"
authors = ["Matthew Polak <contact@matteopolak.com>"]
edition = "2021"
version = "0.39.0"

[[bin]]
name = "skin_renderer"

[dependencies]
bytemuck.workspace = true
glam.workspace = true
image.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tobj.workspace = true
tokio.workspace = true
tracing.workspace = true
wgpu.workspace = true
