[package]
name = "statpixel"
version = "0.39.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/statpixel"
readme = "https://github.com/matteopolak/statpixel/blob/main/README.md"

[[bench]]
name = "bench_main"
path = "../../benches/bench_main.rs"
harness = false

[dependencies]
api.path = "../api"
database.path = "../database"
minecraft.path = "../minecraft"
translate.path = "../translate"
hypixel.path = "../hypixel"
image.path = "../image"
axum.workspace = true
axum-extra.workspace = true
bincode.workspace = true
bitcode.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy_macro.workspace = true
flate2.workspace = true
futures.workspace = true
fxhash.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
plotters.workspace = true
poise.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
skia-safe.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
humantime.workspace = true
serde_json.workspace = true
redis.workspace = true

[dependencies.dotenvy]
workspace = true
optional = true

[dev-dependencies]
criterion = "0.5"

[features]
runtime_env = ["api/runtime_env", "database/runtime_env", "dep:dotenvy"]
